--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "websocket": "^1.0.34",
+    "ws": "^8.14.2"
   }
 }
