--- a/service/package.json
+++ b/service/package.json
@@ -4,7 +4,7 @@
   "description": "When I was young, my diet consisted mostly of mac and cheese, toast, or packaged meals. As I grew up, my family and I realized that eating that way is not very healthy. We started looking for recipes that were healthy and tasted good, and slowly we started building up a binder of family recipes. Now, the binder is broken and greasy and starting to lose pages. I want to make a recipe website for my family so that our collection of recipes is safe and can grow bigger than our binder.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "keywords": [],
   "author": "",
@@ -14,8 +14,14 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
     "uuid": "^9.0.1",
     "websocket": "^1.0.34",
     "ws": "^8.14.2"
+  },
+  "devDependencies": {
+    "vite": "^5.0.6"
   }
 }
